<resources>
    <string name="app_name">Spotter</string>
    <string name="categories_activity">Kategorije</string>
    <string name="dummy_text">Kategorija/Vježba</string>
    <string name="category_dialog_title">Nova kategorija</string>
    <string name="category_dialog_title_edit">Uredi kategoriju</string>
    <string name="category_exercise_dialog_name_hint">Naziv</string>
    <string name="category_exercise_dialog_negative">Odustani</string>
    <string name="category_exercise_dialog_positive">Spremi</string>
    <string name="exercise_dialog_title">Nova vježba</string>
    <string name="exercise_dialog_title_edit">Uredi vježbu</string>
    <string name="category_deleted">Kategorija obrisana</string>
    <string name="exercise_deleted">Vježba obrisana</string>
    <string name="category_add_edit_fail">Unesite naziv kategorije!</string>
    <string name="category_add_success">Kategorija dodana!</string>
    <string name="category_edit_success">Kategorija uređena!</string>
    <string name="exercise_add_edit_fail">Unesite naziv vježbe!</string>
    <string name="exercise_add_success">Vježba dodana!</string>
    <string name="exercise_edit_success">Vježba uređena!</string>
    <string name="dialog_delete">Obriši</string>
    <string name="dialog_cancel">Odustani</string>
    <string name="dialog_discard">Odbaci</string>
    <string name="dialog_save">Spremi</string>
    <string name="category_dialog_delete_title">Brisanje kategorije</string>
    <string name="category_dialog_delete_text">Vježbe unutar kategorije neće biti obrisane, ali će biti uklonjene iz kategorije!</string>
    <string name="snackbar_category_text_part1">Kategorija</string>
    <string name="snackbar_category_text_part2">je obrisana!</string>
    <string name="exercise_dialog_delete_title">Brisanje vježbe</string>
    <string name="exercise_dialog_delete_text">Brisanjem vježbe brišu se svi podaci u njoj!</string>
    <string name="snackbar_exercise_text_part1">Vježba</string>
    <string name="snackbar_exercise_text_part2">je obrisana!</string>
    <string name="snackbar_cancel">Poništi</string>
    <string name="exercise_dialog_remove_title">Uklanjanje vježbe</string>
    <string name="exercise_dialog_remove_text">Vježba neće biti obrisana, ali će biti uklonjena iz kategorije!</string>
    <string name="snackbar_exercise_remove_text_part1">Vježba</string>
    <string name="snackbar_exercise_remove_text_part2">je uklonjena!</string>
    <string name="calendar">Kalendar</string>
    <string name="settings">Postavke</string>
    <string name="menu">menu</string>
    <string name="category_tab_text_1">Kategorije</string>
    <string name="category_tab_text_2">Vježbe</string>
    <string name="tab_text_1">Nova vježba</string>
    <string name="tab_text_2">Povijest</string>
    <string name="tab_text_3">Statistika</string>
    <string name="set">Serija</string>
    <string name="reps">Ponavljanja</string>
    <string name="weight">Kg</string>
    <string name="note">Bilješka</string>
    <string name="note_2">Bilješka:</string><!-- %1$s -->
    <string name="date">Datum</string>
    <string name="time">Vrijeme</string>
    <string name="edit_set_title">Uredi seriju</string>
    <string name="edit_set_reps_empty">Unesite ponavljanja!</string>
    <string name="edit_set_weight_empty">Unesite kilažu!</string>
    <string name="set_dialog_delete_title">Brisanje serije</string>
    <string name="set_dialog_delete_text">Jeste li sigurni da želite obrisati seriju?</string>
    <string name="save_sets">Spremi</string>
    <string name="add_note">Dodaj bilješku</string>
    <string name="edit_item">Uredi</string>
    <string name="delete_item">Obriši</string>
    <string name="remove_item">Ukloni</string>
    <string name="item_selected_title">Uređivanje</string>
    <string name="save_sets_dialog_ok">U redu</string>
    <string name="save_sets_dialog_title">Greška!</string>
    <string name="save_sets_dialog_text">Unesite seriju prije spremanja!</string>
    <string name="set_dummy_text">1</string>
    <string name="rep_dummy_text">12</string>
    <string name="weight_dummy_text">15</string>
    <string name="back_button_dialog_title">Spremi promjene?</string>
    <string name="back_button_dialog_text">Jeste li sigurni da želite izaći? Nespremljene promjene bit će obrisane.</string>
    <string name="history_item_delete_title">Brisanje zapisa</string>
    <string name="history_item_delete_text">Jeste li sigurni da želite obrisati ovaj zapis?</string>
    <string name="add_existing_exercise">Dodaj vježbu</string>
    <string name="multiple_exercise_fail">Izaberite vježbu sa popisa!</string>
    <string name="data_saved">Podaci su spremljeni!</string>
    <string name="exercise_add_fail">Vježba već postoji!</string>
    <string name="category_add_fail">Kategorija već postoji!</string>
    <string name="search_exercises">Pretraži</string>
    <string name="total_volume">Ukupni volumen</string>
    <string name="number">%1$s kg</string>
    <string name="one_month">1 mjesec</string>
    <string name="three_months">3 mjeseca</string>
    <string name="six_months">6 mjeseci</string>
    <string name="one_year">1 godina</string>
    <string name="all_time">Cijelo vrijeme</string>
    <string name="chart_text">Nema podataka za prikaz.</string>
    <string name="calendar_no_data">Nema podataka za izabrani dan!</string>
    <string name="deleted_exercise_name">Vježba obrisana</string>
    <string name="exercises">Vježbe</string>
    <string name="sets">Serije</string>
    <string name="weight_volume">Kilaža</string>
    <string name="today">Danas</string>


    <string-array name="graph_items">
        <item>Ukupni volumen</item>
        <item>Ukupna ponavljanja</item>
        <item>Max kilaža</item>
        <item>Max ponavljanja</item>
        <item>1RM</item>
    </string-array>
<!--
    <string-array name="graph_times">
        <item>1 mjesec</item>
        <item>3 mjeseca</item>
        <item>6 mjeseci</item>
        <item>1 godina</item>
        <item>Cijelo vrijeme</item>
    </string-array>
    -->
</resources>
