<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/expand_menu"
        android:icon="@drawable/ic_more_vert_white"
        android:title="@string/menu"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/calendar_menu"
                android:icon="@drawable/ic_date_black"
                android:title="@string/calendar"
                app:showAsAction="withText"/>

            <item
                android:id="@+id/settings_menu"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/settings"
                app:showAsAction="withText"/>

        </menu>

    </item>

</menu>