<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="12dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="8dp"
    android:id="@+id/calendar_header">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:id="@+id/exercises_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sets_lay">

            <TextView
                android:id="@+id/exercises_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercises"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/exercises_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_dummy_text"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sets_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/exercises_lay"
            app:layout_constraintEnd_toStartOf="@+id/reps_lay">

            <TextView
                android:id="@+id/sets_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/sets_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_dummy_text"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reps_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/sets_lay"
            app:layout_constraintEnd_toStartOf="@+id/weight_lay">

            <TextView
                android:id="@+id/reps_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/reps_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rep_dummy_text"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weight_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/reps_lay"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_volume"
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/weight_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_dummy_text"
                android:textSize="20sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>