<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="0,1,2">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center">

        <TextView
            android:id="@+id/header_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="0"/>
        <TextView
            android:id="@+id/header_rep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="1"/>
        <TextView
            android:id="@+id/header_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_column="2"/>
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:layout_column="3" />
        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:layout_column="4" />
    </TableRow>
    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>-->
</TableLayout>