<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.NewExerciseFragment"
        android:background="#F3F3F3"
        android:paddingBottom="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/note_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exercise_input_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/note"
                    android:inputType="textCapSentences|textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/add_exercise_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/note_card_view">

            <RelativeLayout
                android:id="@+id/relative_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:gravity="center"
                android:focusableInTouchMode="true">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/rep_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    app:elevation="0dp"
                    android:src="@drawable/ic_remove"
                    android:layout_margin="10dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reps_input_layout"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/rep_sub"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/exercise_input_reps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reps"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/rep_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    app:elevation="0dp"
                    android:src="@drawable/ic_add"
                    android:layout_toEndOf="@id/reps_input_layout"
                    android:layout_margin="10dp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/weight_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    app:elevation="0dp"
                    android:src="@drawable/ic_remove"
                    android:layout_below="@+id/rep_sub"
                    android:layout_margin="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weight_input_layout"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/reps_input_layout"
                    android:layout_toEndOf="@+id/weight_sub"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/exercise_input_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/weight"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/weight_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    app:elevation="0dp"
                    android:src="@drawable/ic_add"
                    android:layout_below="@+id/rep_add"
                    android:layout_toEndOf="@+id/weight_input_layout"
                    android:layout_margin="10dp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/add_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabCustomSize="50dp"
                    app:elevation="0dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:src="@drawable/ic_check"
                    android:layout_below="@id/weight_input_layout"
                    android:layout_toEndOf="@+id/weight_sub"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/sets_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/add_exercise_view">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/performed_sets_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/sets_layout" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
